fixed gap bw menu and navbar for some devices

--- a/css/phone1.css
+++ b/css/phone1.css
@@ -36,7 +36,7 @@
     transition: 1s ease;
     position: absolute;
     left: 0;
-    top: -17vh;
+    top: -16.49vh;
     width: 100%;
     z-index: -102;
     transition: 1s ease;
@@ -77,7 +77,7 @@
     margin: 0;
     position: absolute;
     font-size: 30px;
-    transform: translateY(27vh);
+    transform: translateY(208px);
     /* top:10vh; */
     left: 0px;
     z-index: -100;
